traefik/traefik.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
  labels:
    app: traefik
    component: ingress-controller
  name: traefik-ingress-controller
spec:
  selector:
    matchLabels:
      app: traefik
      name: ingress-controller
  template:
    metadata:
      labels:
        app: traefik
        name: ingress-controller
    spec:
      serviceAccount: traefik-ingress
      hostNetwork: true
      containers:
      - name: traefik
        image: traefik
        args:
        - --api
        - --api.insecure
        - --providers.kubernetescrd
        - --entrypoints.http
        - --entrypoints.traefik.address=:1234
        - --entrypoints.http.address=:80
        ports:
        - containerPort: 80
          hostPort: 80
          name: http
